simplify ASN1's runtime mappings (preparing to avoid leakage) + cleanup the internals